Fix mobile main project visibility

--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ header {
   height: 1px;
   padding: 0;
   margin: -1px;
-  overflow: hidden;
+  overflow: visible;
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
   border: 0;
